Tests/RunCMake/NinjaMultiConfig/SimpleCrossConfigs-relwithdebinfo-in-release-graph-build-stderr.txt
^ninja: error: unknown target 'simpleexe:RelWithDebInfo'$
